# mipt

./: README.md
Applications/Algorithm A*/: README.md
Applications/Algorithm A*/code/: CMakeLists.txt  additional.cpp  additional.hpp  application.cpp  application.hpp  grid.cpp  grid.hpp  main.cpp  view.cpp  view.hpp
Machine Learning/: README.md
Machine Learning/Homeworks/1 term/HW_1_Linclass_kNN/: submission_hw1_basic.json
Machine Learning/Homeworks/1 term/Lab1_Ensembles_and_SVM/: Lab1_part1_bagging.ipynb
Machine Learning/tasks/1 term/HW_1_Linclass_kNN/: HW1_kNN_and_Logistic_regression.ipynb
Machine Learning/tasks/1 term/HW_2_Texts/: comments.tsv  homework2_texts.ipynb
Machine Learning/tasks/1 term/Lab1_Ensembles_and_SVM/: Baseline_GBM_solution.ipynb  Lab1_part2_SVM.ipynb  Lab1_part3_boosting.ipynb
Machine Learning/tasks/1 term/Lab2_DL/: Lab2_DL_part2.ipynb  Lab3_DL_part3.ipynb  solution.csv
Parallel programming/: README.md
Parallel programming/tasks/1 term/collectiveFunctionTime/: README.md  extra_functions.h
Parallel programming/tasks/1 term/even-oddSort/: README.md  gen.c
Parallel programming/tasks/2 term/exponent/: 1.c  Makefile  README.md
Parallel programming/tasks/2 term/gauss-jordan/: 1.c  Makefile  README.md  matrix.txt
Parallel programming/tasks/2 term/harmRowSum/: Makefile  README.md  task.c
Parallel programming/tasks/2 term/loops/: README.md
Parallel programming/tasks/2 term/orderedrangsOpenMP/: Makefile  README.md  task.c
Parallel programming/tasks/2 term/seidelMethod/: 1.c  Makefile  README.md
(+34 files in other folders)
